[gd_scene load_steps=8 format=3 uid="uid://dl6r3ucr4x64p"]

[ext_resource type="Script" path="res://Towers/Tree_Missile.gd" id="1_c4pyi"]
[ext_resource type="Texture2D" uid="uid://dinc2j2shlntm" path="res://Assets/Cannon frames/treemissile1.png" id="1_hla7i"]
[ext_resource type="Texture2D" uid="uid://bv07lg525k863" path="res://Assets/Cannon frames/treemissile2.png" id="3_mp6i8"]
[ext_resource type="PackedScene" uid="uid://ctpmsrrn0x3o6" path="res://Towers/health_module.tscn" id="4_bnp27"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ilwns"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hla7i")
}, {
"duration": 1.0,
"texture": ExtResource("3_mp6i8")
}],
"loop": true,
"name": &"tree_launcher",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8817b"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w0otm"]
radius = 64.0078

[node name="StaticBody2D" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_c4pyi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_ilwns")
animation = &"tree_launcher"
autoplay = "tree_launcher"
frame_progress = 0.285961

[node name="Tower_Body" type="CollisionShape2D" parent="."]
scale = Vector2(0.9, 0.9)
shape = SubResource("CircleShape2D_8817b")

[node name="Aim" type="Marker2D" parent="."]

[node name="Tower" type="Area2D" parent="."]
visible = false
collision_mask = 3

[node name="Tower_Area" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_w0otm")

[node name="Tree_container" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="HealthModule" parent="." instance=ExtResource("4_bnp27")]
maxHealth = 1000

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
